--- a/NewVisionPayment/Pages/Payment.razor
+++ b/NewVisionPayment/Pages/Payment.razor
@@ -100,6 +100,7 @@
 
     public NewVisionCustomer empty = new NewVisionCustomer();
 
+    // A method to increment the page number and load the next Blazor components
     void pageForward()
     {
         pageNumber += 1;
@@ -121,7 +122,7 @@
 
     }
 
-    // A method to display the previous blazor component.
+    // A method to decrement the page number and display the previous blazor component.
     void pageBack()
     {
         pageNumber -= 1;
