--- a/NewVisionPayment/Pages/Help.razor
+++ b/NewVisionPayment/Pages/Help.razor
@@ -1,6 +1,23 @@
 ﻿@page "/help"
 
+<MudCard>
 <h3>This is the help Page</h3>
+   If you are having difficulties using the site, some of the answers you need may be on this page.
+  <MudCard>
+    <MudCardHeading>
+        Frequently Asked Questions and Comments:
+      </MudCadHeading>
+    <SimpleList>
+      <ListItem>Where can I find my Case ID?</ListItem>
+      <ListItem>Where can I find my Online Reference?</ListItem>
+      <ListItem>My details are wrong, what should I do?</ListItem>
+      <ListItem>Do I have to pay my own fine?</ListItem>
+      <ListItem>I don't think I should have to pay this fine.</ListItem>
+      <ListItem>What will happen if I do not pay this fine?</ListItem>
+    </SimpleList>
+  </MudCard>
+  
+</MudCard>  
 
 @code {
 
