Adding footer and help pages

--- a/NewVisionPayment/Pages/Help.razor
+++ b/NewVisionPayment/Pages/Help.razor
@@ -4,17 +4,17 @@
 <h3>This is the help Page</h3>
    If you are having difficulties using the site, some of the answers you need may be on this page.
   <MudCard>
-    <MudCardHeading>
+    <MudCardHeader>
         Frequently Asked Questions and Comments:
-      </MudCadHeading>
-    <SimpleList>
-      <ListItem>Where can I find my Case ID?</ListItem>
-      <ListItem>Where can I find my Online Reference?</ListItem>
-      <ListItem>My details are wrong, what should I do?</ListItem>
-      <ListItem>Do I have to pay my own fine?</ListItem>
-      <ListItem>I don't think I should have to pay this fine.</ListItem>
-      <ListItem>What will happen if I do not pay this fine?</ListItem>
-    </SimpleList>
+      </MudCardHeader>
+    <MudList>
+      <MudListItem>Where can I find my Case ID?</MudListItem>
+      <MudListItem>Where can I find my Online Reference?</MudListItem>
+      <MudListItem>My details are wrong, what should I do?</MudListItem>
+      <MudListItem>Do I have to pay my own fine?</MudListItem>
+      <MudListItem>I don't think I should have to pay this fine.</MudListItem>
+      <MudListItem>What will happen if I do not pay this fine?</MudListItem>
+    </MudList>
   </MudCard>
   
 </MudCard>  
