--- a/NewVisionPayment/Shared/MainLayout.razor
+++ b/NewVisionPayment/Shared/MainLayout.razor
@@ -23,6 +23,9 @@
     <MudMainContent>
         @Body
     </MudMainContent>
+    <MudAppBar Color="Color.Primary" Elevation="1" Style="top: auto; bottom: 0">
+        This is the footer!
+    </MudAppBar>
 </MudLayout>
 
 @code {
