--- a/NewVisionPayment/Shared/WhatNext.razor
+++ b/NewVisionPayment/Shared/WhatNext.razor
@@ -15,7 +15,7 @@
                 <MudListItem Icon="@Icons.Material.Filled.Phone"><MudText Typo="Typo.h6">Purchase a television licence</MudText></MudListItem>
             </MudList>
             <MudText>
-                The Televisino licensing authority and the Courts Service NI have been notified of your payment.
+                The Television licensing authority and the Courts Service NI have been notified of your payment.
             </MudText>
             <MudText>
                 If you have not received a letter detailing your payment please contact the Courts Service N.I.
