--- a/NewVisionPayment/Shared/WhatNext.razor
+++ b/NewVisionPayment/Shared/WhatNext.razor
@@ -1,5 +1,6 @@
 ﻿@page "/whatnext"
 
+    // This page is designed to provide information
     <MudCard>
         <MudCardHeader>
         <CardHeaderContent>
