--- a/NewVisionPayment/Pages/Index.OLD.razor
+++ b/NewVisionPayment/Pages/Index.OLD.razor
@@ -9,6 +9,8 @@
 @using System.ComponentModel.DataAnnotations
 
 
+@inject ICosmosDbService CosmosDbService
+
 @inject NavigationManager NavigationManager
 @inject ICosmosDbService CosmodDbService
 
@@ -75,13 +77,10 @@
     public static bool validCustomer = false;
     public static bool errorMessage = false;
 
-    // Checking for a valid caseID and Reference
-    // should be replaced with some thing sensible that queries the database...
     async void OnValidSubmit() // This takes the submit from the button in the form
     {
         // Test purposes only
-        // checking each entry in the arraylist - we should do this
-        // by a databse query not downloading the whole database
+        //Console.WriteLine("In the submit section");
         foreach (NewVisionCustomer cust in customers)
         {
             // Test purposes only
@@ -103,16 +102,19 @@
         }
 
     }
-
-    // This gets our initial database - this should be updated to be a correct crud request, rather than the sloppy
-    // get evreything that it currently is!!!! The things that are done to save time!
-    protected static async Task OnInitializedAsync()
+    protected override async Task OnInitializedAsync()
     {
-        // Our customers list is downloaded from the cosmos DB - replace with some reasonable programming
+
         customers = await CosmosDbService.GetItemsAsync("SELECT * FROM c");
         // Test purposes only
         //Console.WriteLine("In the all customers section");
 
     }
+
+
+    //We have the databse, now we need to check for the actual case Id and Reference
+
+
+
 
 }
