flatten the mudcard

--- a/NewVisionPayment/Shared/StartPanel.razor
+++ b/NewVisionPayment/Shared/StartPanel.razor
@@ -10,7 +10,7 @@
 @using NewVisionPayment.Services;
 @using NewVisionPayment.Controllers;
 
-<MudCard>
+<MudCard Elevation="0">
     <MudCardHeader>
     </MudCardHeader>
     <MudCardContent>
