--- a/NewVisionPayment/Pages/Index.razor
+++ b/NewVisionPayment/Pages/Index.razor
@@ -24,8 +24,9 @@
             <MudItem xs="12" sm="6">
 
 
-                <MudCard>
+                <MudCard Elevation="0">
                     <MudCardHeader>
+                        &nbsp;
                     </MudCardHeader>
                     <MudCardContent>
                         <MudList>
