update the footer text

--- a/NewVisionPayment/Shared/MainLayout.razor
+++ b/NewVisionPayment/Shared/MainLayout.razor
@@ -25,7 +25,7 @@
     </MudMainContent>
 
     <MudAppBar Bottom="true" Fixed="true" Dense="true" Color="Color.Primary" Elevation="0" Style="bottom: 0">
-        This is the footer!
+        © 2021 NewVision Payments Ltd. (This site has entertainment value only)
     </MudAppBar>
 
 </MudLayout>
