--- a/NewVisionPayment/Shared/BeforeYouBegin.razor
+++ b/NewVisionPayment/Shared/BeforeYouBegin.razor
@@ -17,7 +17,7 @@
             </MudList>
         </MudCardContent>
         <MudCardActions>
-            <MudButton Variant="Variant.Text" Color="Color.Primary">Read More</MudButton>
+            <MudButton Link="https://www.tvlicensing.co.uk" Target="_blank" Variant="Variant.Text" Color="Color.Primary">More Info</MudButton>
         </MudCardActions>
     </MudCard>
 
