stop help opening in a new tab/window

--- a/NewVisionPayment/Shared/BeforeYouBegin.razor
+++ b/NewVisionPayment/Shared/BeforeYouBegin.razor
@@ -17,7 +17,7 @@
             </MudList>
         </MudCardContent>
         <MudCardActions>
-            <MudButton Link="https://newvisionpayment.azurewebsites.net/help" Target="_blank" Variant="Variant.Text" Color="Color.Primary">More Info</MudButton>
+            <MudButton Link="https://newvisionpayment.azurewebsites.net/help" Variant="Variant.Text" Color="Color.Primary">More Info</MudButton>
         </MudCardActions>
     </MudCard>
 
