--- a/NewVisionPayment/Pages/Index.razor
+++ b/NewVisionPayment/Pages/Index.razor
@@ -113,7 +113,7 @@
     }
 
 
-    //We have the databse, now we need to check for the actual case Id and Reference
+    //We have the database, now we need to check for the actual case Id and Reference
 
 
 
