* PayFine.razor: Remove mudblazor elevation
* Payment.razor: Fix the timeline feature

--- a/NewVisionPayment/Shared/PayFine.razor
+++ b/NewVisionPayment/Shared/PayFine.razor
@@ -3,7 +3,7 @@
 @using NewVisionPayment.Models;
 
 
-<MudCard>
+<MudCard Elevation="0">
     <MudList Dense="true">
         <MudText> Your fine, as levied by the CTSNI is:</MudText>
         <MudTextField @bind-Value="displayFine.fineAmount" Label="Fine Amount £" ReadOnly="true" />
