* IfSomeThingIsWrong.razor: Fix th ehelp text
* Failure.razor: add return to payment page button

* BeforeYouBegin.razor: fix help page text and link

* Payment.razor: moved the back to payment button to failurre page

--- a/NewVisionPayment/Pages/Payment.razor
+++ b/NewVisionPayment/Pages/Payment.razor
@@ -205,10 +205,13 @@
     }
 
     // A method to load the payment declined page - we go back to the payment page
+    // Added to the failure page itself
+    /*
     void pageDeclined()
     {
         pageNumber = 1;
     }
+    */
 
     // A method to return to the index page the user completes the process or decides to leave.
     void goHome()
