--- a/NewVisionPayment/Shared/BeforeYouBegin.razor
+++ b/NewVisionPayment/Shared/BeforeYouBegin.razor
@@ -1,6 +1,6 @@
 ﻿@page "/beforeyoubegin"
 
-    <MudCard>
+    <MudCard Elevation="0">
         <MudCardHeader>
         <CardHeaderContent>
             <MudText Typo="Typo.h5">Before you begin.</MudText>
@@ -17,7 +17,7 @@
             </MudList>
         </MudCardContent>
         <MudCardActions>
-            <MudButton Link="https://newvisionpayment.azurewebsites.net/help" Variant="Variant.Text" Color="Color.Primary">More Info</MudButton>
+            <MudButton Link="https://newvisionpayment.azurewebsites.net/help" Variant="Variant.Text" Color="Color.Primary">Help Pages</MudButton>
         </MudCardActions>
     </MudCard>
 
