--- a/NewVisionPayment/Shared/IfSomeThingIsWrong.razor
+++ b/NewVisionPayment/Shared/IfSomeThingIsWrong.razor
@@ -1,5 +1,5 @@
 ﻿
-    <MudCard>
+    <MudCard Elevation="0">
         <MudCardHeader>
         <CardHeaderContent>
             <MudText Typo="Typo.h5">What to do if these details are wrong:</MudText>
@@ -17,7 +17,7 @@
             </MudList>
         </MudCardContent>
         <MudCardActions>
-            <MudButton Variant="Variant.Text" Color="Color.Primary">Read More</MudButton>
+            <MudButton Link="https://newvisionpayment.azurewebsites.net/help" Variant="Variant.Text" Color="Color.Primary">Help Pages</MudButton>
         </MudCardActions>
     </MudCard>
 
