--- a/NewVisionPayment/Pages/Payment.razor
+++ b/NewVisionPayment/Pages/Payment.razor
@@ -158,7 +158,7 @@
             }
             else
             {
-                <MudButton Variant="Variant.Filled" DisableElevation="true" Color="Color.Primary" Size="Size.Large" Class="mt-8" @onclick="@pageDeclined">Back</MudButton>
+                //<MudButton Variant="Variant.Filled" DisableElevation="true" Color="Color.Primary" Size="Size.Large" Class="mt-8" @onclick="@pageDeclined">Back</MudButton>
             }
         }
 
