--- a/NewVisionPayment/Shared/StartPanel.razor
+++ b/NewVisionPayment/Shared/StartPanel.razor
@@ -11,7 +11,7 @@
 @using NewVisionPayment.Controllers;
 
 
-        <Table>
+        <table>
             <tr>
                 <MudText>Enter your Case Identifier here:</MudText>
                 <MudItem xs="12">
@@ -31,7 +31,7 @@
                     </div>
                 </MudItem>
             </tr>
-        </Table>
+        </table>
 
     @customer
 
